[package]
name = "api_rest_mysql_11"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
sqlx = { version = "0.4.1", features = [ "mysql","runtime-async-std-native-tls" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
